==> FanHuaLady/stm32_usb/Hardware/usbd_conf.c <==
#include "stm32h7xx.h"
#include "stm32h723xx.h"
#include "stm32h7xx_hal.h"
#include "stm32h7xx_hal_pcd.h"
#include "stm32h7xx_hal_pcd_ex.h"
#include "usbd_def.h"
#include "usbd_core.h"
#include "usbd_cdc.h"

void HAL_PCD_MspInit(PCD_HandleTypeDef* pcdHandle)
{
  GPIO_InitTypeDef GPIO_InitStruct = {0};
  RCC_PeriphCLKInitTypeDef PeriphClkInitStruct = {0};
  if(pcdHandle->Instance==USB_OTG_HS)												// HS
  {
    PeriphClkInitStruct.PeriphClockSelection = RCC_PERIPHCLK_USB;
    PeriphClkInitStruct.UsbClockSelection = RCC_USBCLKSOURCE_HSI48;
    if (HAL_RCCEx_PeriphCLKConfig(&PeriphClkInitStruct) != HAL_OK)
    {
      Error_Handler();
    }
	
    HAL_PWREx_EnableUSBVoltageDetector();											// 使能USB电压检测器

    __HAL_RCC_GPIOA_CLK_ENABLE();
    
    GPIO_InitStruct.Pin = GPIO_PIN_11|GPIO_PIN_12;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
    GPIO_InitStruct.Alternate = GPIO_AF10_OTG1_HS;									// 复用功能改为AF10
    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

    
    __HAL_RCC_USB_OTG_HS_CLK_ENABLE();												// 使能HS时钟

    
    HAL_NVIC_SetPriority(OTG_HS_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(OTG_HS_IRQn);
  
  }
}

void HAL_PCD_MspDeInit(PCD_HandleTypeDef* pcdHandle)
{
  if(pcdHandle->Instance==USB_OTG_HS)
  {
    __HAL_RCC_USB_OTG_HS_CLK_DISABLE();

    
    HAL_GPIO_DeInit(GPIOA, GPIO_PIN_11|GPIO_PIN_12);

    HAL_NVIC_DisableIRQ(OTG_HS_IRQn);
  }
}

USBD_StatusTypeDef USBD_LL_Init(USBD_HandleTypeDef *pdev)
{
	if (pdev->id == DEVICE_HS) 														// 增加对HS的支持
	{
		hpcd_USB_OTG_HS.pData = pdev;												// 换成HS
		pdev->pData = &hpcd_USB_OTG_HS;

		hpcd_USB_OTG_HS.Instance = USB_OTG_HS;										// 改为HS外设
		hpcd_USB_OTG_HS.Init.dev_endpoints = 9;										//
		hpcd_USB_OTG_HS.Init.speed = PCD_SPEED_FULL;								// 速度设为全速
		hpcd_USB_OTG_HS.Init.dma_enable = DISABLE;
		hpcd_USB_OTG_HS.Init.phy_itface = PCD_PHY_EMBEDDED;							// 使用内部PHY
		hpcd_USB_OTG_HS.Init.Sof_enable = DISABLE;									// 
		hpcd_USB_OTG_HS.Init.low_power_enable = DISABLE;
		hpcd_USB_OTG_HS.Init.lpm_enable = DISABLE;
		hpcd_USB_OTG_HS.Init.battery_charging_enable = DISABLE;
		hpcd_USB_OTG_HS.Init.vbus_sensing_enable = DISABLE;
		hpcd_USB_OTG_HS.Init.use_dedicated_ep1 = DISABLE;
		if (HAL_PCD_Init(&hpcd_USB_OTG_HS) != HAL_OK)								// 错
		{
			Error_Handler( );
		}

#if (USE_HAL_PCD_REGISTER_CALLBACKS == 1U)
  HAL_PCD_RegisterCallback(&hpcd_USB_OTG_FS, HAL_PCD_SOF_CB_ID, PCD_SOFCallback);
  HAL_PCD_RegisterCallback(&hpcd_USB_OTG_FS, HAL_PCD_SETUPSTAGE_CB_ID, PCD_SetupStageCallback);
  HAL_PCD_RegisterCallback(&hpcd_USB_OTG_FS, HAL_PCD_RESET_CB_ID, PCD_ResetCallback);
  HAL_PCD_RegisterCallback(&hpcd_USB_OTG_FS, HAL_PCD_SUSPEND_CB_ID, PCD_SuspendCallback);
  HAL_PCD_RegisterCallback(&hpcd_USB_OTG_FS, HAL_PCD_RESUME_CB_ID, PCD_ResumeCallback);
  HAL_PCD_RegisterCallback(&hpcd_USB_OTG_FS, HAL_PCD_CONNECT_CB_ID, PCD_ConnectCallback);
  HAL_PCD_RegisterCallback(&hpcd_USB_OTG_FS, HAL_PCD_DISCONNECT_CB_ID, PCD_DisconnectCallback);

  HAL_PCD_RegisterDataOutStageCallback(&hpcd_USB_OTG_FS, PCD_DataOutStageCallback);
  HAL_PCD_RegisterDataInStageCallback(&hpcd_USB_OTG_FS, PCD_DataInStageCallback);
  HAL_PCD_RegisterIsoOutIncpltCallback(&hpcd_USB_OTG_FS, PCD_ISOOUTIncompleteCallback);
  HAL_PCD_RegisterIsoInIncpltCallback(&hpcd_USB_OTG_FS, PCD_ISOINIncompleteCallback);
#endif
		HAL_PCDEx_SetRxFiFo(&hpcd_USB_OTG_HS, 0x80);								// 可设置
		HAL_PCDEx_SetTxFiFo(&hpcd_USB_OTG_HS, 0, 0x40);
		HAL_PCDEx_SetTxFiFo(&hpcd_USB_OTG_HS, 1, 0x80);
	}
	return USBD_OK;
}
